compiler/tools/fpp-check/test/connection_pattern/event_missing_target_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/event_missing_target_port.fpp: 17.41
    event connections instance events { c }
                                        ^
error: instance c has no event port
